--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
+    "detect-passive-events": "^2.0.3",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
