--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "ag-grid-community": "^27.1.0",
     "ag-grid-react": "^27.1.0",
     "axios": "^0.26.1",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "detect-passive-events": "^2.0.3",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
-    "react": "^18.0.0",
+    "react": "^17.0.2",
     "react-data-grid": "^7.0.0-beta.11",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.2",
     "react-table": "^7.7.0",
